<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="#ebffff">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:textColor="#000000"
        android:padding="12dp"
        android:text="유니트 알림 설정"
        android:textSize="30dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_alarm_black_18dp"
        android:textColor="#000000"
        android:padding="12dp"
        android:text="@string/noti"
        android:textSize="25dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp"
        android:textColor="#7889ff"
        android:text="@string/how_to_meaning"
        android:textSize="15dp"
        android:textStyle="italic" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Switch
            android:id="@+id/switch_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/green"
            android:textColor="#000000"
            android:textSize="@dimen/text_20dp"

            />
        <Switch
            android:id="@+id/switch_donga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch_green"
            android:padding="5dp"
            android:text="@string/donga"
            android:textColor="#000000"
            android:textSize="@dimen/text_20dp"

            />
        <Switch
            android:id="@+id/switch_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch_donga"
            android:padding="5dp"
            android:text="@string/city"
            android:textColor="#000000"
            android:textSize="@dimen/text_20dp"

            />

        <Switch
            android:id="@+id/switch_u_nion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch_city"
            android:padding="5dp"
            android:text="@string/u_nion"
            android:textColor="#000000"
            android:textSize="@dimen/text_20dp"

            />
        <Switch
            android:id="@+id/switch_jamsil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch_u_nion"
            android:padding="5dp"
            android:text="@string/jamsil"
            android:textColor="#000000"
            android:textSize="@dimen/text_20dp"

            />
        <Switch
            android:id="@+id/switch_jungsan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch_jamsil"
            android:padding="5dp"
            android:text="@string/jungsan"
            android:textColor="#000000"
            android:textSize="@dimen/text_20dp"
            />
        <Switch
            android:id="@+id/switch_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch_jungsan"
            android:paddingTop="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/notice"
            android:textColor="#000000"
            android:textSize="@dimen/text_20dp"
            />
        <Switch
            android:id="@+id/switch_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch_notice"
            android:padding="5dp"
            android:text="@string/gallery"
            android:textColor="#000000"
            android:textSize="@dimen/text_20dp"
            />
        <Switch
            android:id="@+id/switch_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch_gallery"
            android:padding="5dp"
            android:text="@string/total"
            android:textColor="#000000"
            android:textSize="@dimen/text_20dp"
            />
        <Button
            android:id="@+id/button_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch_total"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:visibility="gone"
            android:text="@string/comment"
            android:textColor="#000000"
            android:textSize="@dimen/text_15dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/unit_bottom_logo"
        android:textColor="#000000"
        android:text="@string/help"
        android:textSize="13dp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/unit_bottom_logo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:src="@drawable/unit_logo_png"
        android:scaleType="fitEnd"
        android:maxHeight="40dp"
        android:maxWidth="40dp"
        android:textStyle="bold"
        />
    </RelativeLayout>
</LinearLayout>
